--- a/Portofolio/_config.scss
+++ b/Portofolio/_config.scss
@@ -1,9 +1,9 @@
 //variables
 $website-width: 1280px;
-$main-color: #ffbc00;
-$light-color: #f4f4f4;
-$dark-color: #333;
-$medium-color: #ccc;
+$main-color: #48bfe3;
+$light-color: #80ffdb;
+$dark-color: #7400b8;
+$medium-color: #56cfe1;
 $bg-image: url("./img/showcase.jpg");
 
 @function set-text-color($color) {
