--- a/Portofolio/style.css
+++ b/Portofolio/style.css
@@ -126,6 +126,124 @@ input[class^="btn__"]:hover {
   margin: 0 auto 1rem auto;
 }
 
+.items {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+          box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+  grid-gap: 0.2rem;
+}
+
+.item {
+  position: relative;
+  background-color: #48bfe3;
+  overflow: hidden;
+}
+
+.item::after {
+  content: "";
+  position: absolute;
+  display: block;
+  background: inherit;
+  opacity: 0.9;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: scale(2) translateX(-75%) translateY(-75%) rotate(-30deg);
+          transform: scale(2) translateX(-75%) translateY(-75%) rotate(-30deg);
+  -webkit-transition: -webkit-transform 3s cubic-bezier(0.2, 1, 0.3, 1);
+  transition: -webkit-transform 3s cubic-bezier(0.2, 1, 0.3, 1);
+  transition: transform 3s cubic-bezier(0.2, 1, 0.3, 1);
+  transition: transform 3s cubic-bezier(0.2, 1, 0.3, 1), -webkit-transform 3s cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.item:hover:after {
+  -webkit-transform: scale(2) translateX(0) translateY(0) rotate(-28deg);
+          transform: scale(2) translateX(0) translateY(0) rotate(-28deg);
+}
+
+.item:hover .item-image {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.item:hover .item-text {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.item-image {
+  height: auto;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
+  display: block;
+  -webkit-transition: -webkit-transform 750ms cubic-bezier(0.2, 1, 0.3, 1);
+  transition: -webkit-transform 750ms cubic-bezier(0.2, 1, 0.3, 1);
+  transition: transform 750ms cubic-bezier(0.2, 1, 0.3, 1);
+  transition: transform 750ms cubic-bezier(0.2, 1, 0.3, 1), -webkit-transform 750ms cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.item-image:before {
+  content: "";
+  display: block;
+  padding-top: 75%;
+  overflow: hidden;
+}
+
+.item-image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  line-height: 0;
+}
+
+.item-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  text-align: center;
+  z-index: 1;
+  color: #fff;
+  -webkit-transform: translateY(-20%);
+          transform: translateY(-20%);
+  -webkit-transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1), -webkit-transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
+  transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1), -webkit-transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
+  transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1), transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
+  transition: opacity 500ms cubic-bezier(0.2, 1, 0.3, 1), transform 500ms cubic-bezier(0.2, 1, 0.3, 1), -webkit-transform 500ms cubic-bezier(0.2, 1, 0.3, 1);
+  -webkit-transition: delay(300ms);
+  transition: delay(300ms);
+}
+
+.item-text-wrap {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.item-text-title {
+  font-size: 2rem;
+  padding: 0 1rem;
+  margin: 5px 0 0 0;
+}
+
+.item-text-category {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  opacity: 0.7;
+  margin: 0;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -430,6 +548,69 @@ img {
   margin-right: 0.5rem;
 }
 
+.contact-a .text-fields {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "name email" "subject phone" "message message";
+  grid-gap: 1.2rem;
+  margin-bottom: 1.2rem;
+}
+
+.contact-a .text-fields .name-input {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: name;
+}
+
+.contact-a .text-fields .subject-input {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: subject;
+}
+
+.contact-a .text-fields .email-input {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: email;
+}
+
+.contact-a .text-fields .phone-input {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: phone;
+}
+
+.contact-a .text-fields .message-input {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: message;
+  height: 100px;
+}
+
+.contact-a .text-fields .text-input {
+  padding: 0.5rem 1rem;
+}
+
+.contact-a button[type="submit"] {
+  width: 30%;
+  color: #fff;
+  font-size: 1.3rem;
+}
+
+.contact-b .contact-info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+}
+
+.contact-c h1 {
+  text-align: center;
+  font-size: 4rem;
+}
+
 .main-footer {
   background-color: #7400b8;
   color: #fff;
@@ -468,5 +649,105 @@ img {
   line-height: 32px;
   -webkit-transition: all 1s;
   transition: all 1s;
+}
+
+@media (max-width: 800px) {
+  .header__home {
+    height: 30rem;
+  }
+  .header__home .header__content {
+    padding-top: 5rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .header__nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header__nav li {
+    padding: 1rem;
+  }
+  header__home {
+    height: 10rem;
+    border-bottom: 3px solid #48bfe3;
+    background-position: 20% 30%;
+  }
+  header__home header__content {
+    display: none;
+  }
+  header__inner {
+    height: 10rem;
+  }
+  .home-a .specials,
+  .home-b .stats,
+  .home-c .process,
+  .about-d .testimonials,
+  .contact-b .contact-info,
+  .items {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .home-a .specials div {
+    border-bottom: 1px #80ffdb solid;
+    padding-bottom: 1rem;
+  }
+  .home-a .specials div:last-child {
+    border: none;
+    padding-bottom: 0;
+  }
+  .home-b .stats div {
+    padding: 2rem 0 1rem 0;
+  }
+  .about-a .info {
+        grid-template-areas: "bioimage" "bio" "aw1" "aw2" "aw3";
+  }
+  .about-c {
+    display: none;
+  }
+  .contact-a .text-fields {
+        grid-template-areas: "name" "subject" "email" "phone" "message";
+  }
+  .contact-b div {
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #555;
+  }
+  .contact-b div:last-child {
+    border: none;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+  .contact-c {
+    font-size: 2rem;
+  }
+  .main-footer {
+    height: 7rem;
+  }
+  .main-footer .footer-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 1rem;
+    height: 1rem;
+  }
+}
+
+@media (max-height: 580px) {
+  .header__home .header__content {
+    padding-top: 3rem;
+  }
+}
+
+@media (max-height: 330px) {
+  .header__home .header__content h1 {
+    font-size: 2rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
