--- a/Portofolio/style.scss
+++ b/Portofolio/style.scss
@@ -1,5 +1,7 @@
 @import "config";
 @import "utility";
+@import "item_grid";
+
 html {
   scroll-behavior: smooth;
 }
@@ -268,6 +270,61 @@ img {
   }
 }
 
+.contact {
+  &-a {
+    .text-fields {
+      display: grid;
+      grid-template-areas:
+        "name email"
+        "subject phone"
+        "message message";
+      grid-gap: 1.2rem;
+      margin-bottom: 1.2rem;
+
+      .name-input {
+        grid-area: name;
+      }
+      .subject-input {
+        grid-area: subject;
+      }
+      .email-input {
+        grid-area: email;
+      }
+      .phone-input {
+        grid-area: phone;
+      }
+      .message-input {
+        grid-area: message;
+        height: 100px;
+      }
+
+      .text-input {
+        padding: 0.5rem 1rem;
+      }
+    }
+    button[type="submit"] {
+      width: 30%;
+      color: #fff;
+      font-size: 1.3rem;
+    }
+  }
+
+  &-b {
+    .contact-info {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      text-align: center;
+    }
+  }
+
+  &-c {
+    h1 {
+      text-align: center;
+      font-size: 4rem;
+    }
+  }
+}
+
 .main-footer {
   background-color: $dark-color;
   color: #fff;
@@ -299,3 +356,5 @@ img {
     }
   }
 }
+
+@import "media";
