--- a/Portofolio/_media.scss
+++ b/Portofolio/_media.scss
@@ -1,10 +1,13 @@
 //Teblats
 @media (max-width: 800px) {
   .header__home {
+    position: relative;
     height: 30rem;
 
     .header__content {
+      position: absolute;
       padding-top: 5rem;
+      bottom: 10rem;
     }
 
     .header__content h1 {
@@ -19,6 +22,15 @@
   .header__nav {
     flex-direction: row;
     align-items: center;
+    position: relative;
+
+    .header__logo {
+      margin-bottom: 21rem;
+    }
+
+    .header__content {
+      position: absolute;
+    }
 
     .header-links {
       display: none;
@@ -27,26 +39,62 @@
       position: relative;
       display: flex;
       flex-direction: column;
-      height: 30rem;
-      width: 30rem;
       margin-top: 10px;
+      height: 25rem;
+      width: 20rem;
+
+      z-index: 9999;
+
+      &-container {
+        position: absolute;
+        padding-top: 1rem;
+        width: 2rem;
+        height: 2rem;
+        left: 16rem;
+
+        &-box {
+          position: relative;
+          margin-left: 6px;
+          width: 2rem;
+          height: 2rem;
+          bottom: 0.5rem;
+          right: 0.15rem;
+        }
+      }
 
       &-line {
-        position: absolute;
+        position: relative;
         border-top: 2.25px solid #fff;
         display: block;
         padding-top: 0.32rem;
-        width: 1.5rem;
-        top: 2rem;
-        left: 20rem;
+        width: 1.3rem;
+
+        &:nth-child(1) {
+          transform: rotateZ(-45deg) translate(-6px, 9px);
+        }
+
+        &:nth-child(2) {
+          opacity: 0;
+        }
+
+        &:nth-child(3) {
+          transform: rotateZ(45deg) translate(-4px, -3px);
+        }
       }
 
       &-menu {
-        height: 30rem;
-        width: 30rem;
-        background-color: red;
+        background: rgba(0, 0, 0, 0.3);
+        height: 25rem;
+        width: 25rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+
         &-links {
+          margin-top: 3rem;
+          padding: 1rem;
           display: block;
+          color: white;
         }
       }
     }
