--- a/Portofolio/style.css
+++ b/Portofolio/style.css
@@ -324,7 +324,7 @@ img {
   border-color: #48bfe3;
 }
 
-.header__nav .burger-links {
+.header__nav .burger-menu-links {
   display: none;
 }
 
@@ -657,10 +657,13 @@ img {
 
 @media (max-width: 800px) {
   .header__home {
+    position: relative;
     height: 30rem;
   }
   .header__home .header__content {
+    position: absolute;
     padding-top: 5rem;
+    bottom: 10rem;
   }
   .header__home .header__content h1 {
     font-size: 2.5rem;
@@ -676,6 +679,13 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    position: relative;
+  }
+  .header__nav .header__logo {
+    margin-bottom: 21rem;
+  }
+  .header__nav .header__content {
+    position: absolute;
   }
   .header__nav .header-links {
     display: none;
@@ -689,26 +699,64 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    height: 30rem;
-    width: 30rem;
     margin-top: 10px;
+    height: 25rem;
+    width: 20rem;
+    z-index: 9999;
+  }
+  .header__nav .burger-container {
+    position: absolute;
+    padding-top: 1rem;
+    width: 2rem;
+    height: 2rem;
+    left: 16rem;
+  }
+  .header__nav .burger-container-box {
+    position: relative;
+    margin-left: 6px;
+    width: 2rem;
+    height: 2rem;
+    bottom: 0.5rem;
+    right: 0.15rem;
   }
   .header__nav .burger-line {
-    position: absolute;
+    position: relative;
     border-top: 2.25px solid #fff;
     display: block;
     padding-top: 0.32rem;
-    width: 1.5rem;
-    top: 2rem;
-    left: 20rem;
+    width: 1.3rem;
+  }
+  .header__nav .burger-line:nth-child(1) {
+    -webkit-transform: rotateZ(-45deg) translate(-6px, 9px);
+            transform: rotateZ(-45deg) translate(-6px, 9px);
+  }
+  .header__nav .burger-line:nth-child(2) {
+    opacity: 0;
+  }
+  .header__nav .burger-line:nth-child(3) {
+    -webkit-transform: rotateZ(45deg) translate(-4px, -3px);
+            transform: rotateZ(45deg) translate(-4px, -3px);
   }
   .header__nav .burger-menu {
-    height: 30rem;
-    width: 30rem;
-    background-color: red;
+    background: rgba(0, 0, 0, 0.3);
+    height: 25rem;
+    width: 25rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
   .header__nav .burger-menu-links {
+    margin-top: 3rem;
+    padding: 1rem;
     display: block;
+    color: white;
   }
   .header__nav header__home {
     height: 10rem;
